<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kramerius="http://schemas.android.com/apk/res/cz.mzk.kramerius.app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="@dimen/help_menu_top" >

    <cz.mzk.kramerius.app.view.MenuItemWidget
        android:id="@+id/menu_help_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_menu"
        kramerius:menuIcon="@drawable/ic_menu_help_about_grey"
        kramerius:menuIconSelected="@drawable/ic_menu_help_about_green"
        kramerius:menuTitle="@string/help_menu_about" />

    <cz.mzk.kramerius.app.view.MenuItemWidget
        android:id="@+id/menu_help_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_menu"
        kramerius:menuIcon="@drawable/ic_menu_help_content_grey"
        kramerius:menuIconSelected="@drawable/ic_menu_help_content_green"
        kramerius:menuTitle="@string/help_menu_content" />

    <cz.mzk.kramerius.app.view.MenuItemWidget
        android:id="@+id/menu_help_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_menu"
        kramerius:menuIcon="@drawable/ic_menu_help_feedback_grey"
        kramerius:menuIconSelected="@drawable/ic_menu_help_content_grey"
        kramerius:menuTitle="@string/help_menu_feedback" />

</LinearLayout>